k8s/princess/10-princess-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: princess-deployment
  labels:
    app: princess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: princess
  template:
    metadata:
      labels:
        app: princess
    spec:
      containers:
      - name: princess-prod
        image: registry.gitlab.com/ngrave/rana/app/be/princess_prod:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "150m"
            memory: "512Mi"
      imagePullSecrets:
        - name: gitlabregistry
