k8s/princess/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: princess
spec:
  selector:
    app: princess
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
